virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: provider
spec:
  hosts:
    - provider
    - provider.gitops-nxm-v2.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: "/req"
      route:
        - destination:
            # with a 'migration' flag the destination host can be changed from nxm-v2 to the new ns1 namespace
            host: provider.gitops-ns1.svc.cluster.local
            port:
              number: 80
